# Movie-Review-System

./: CMakeLists.txt  README.md  movie.db
src/: main.cpp
src/controller/: Controller.cpp  Controller.h
src/model/: Model.cpp  Model.h
src/view/: View.cpp  View.h
